microfrontend-monorepo/app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-catalog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /product-catalog
            pathType: Prefix
            backend:
              service:
                name: product-catalog
                port:
                  number: 80
